# whichbeer

./: Procfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml  static.yml
app/data/: beer.ipynb  compute_embeddings.py  data.py  migrate.py  postgres.py  scrape_untappd_descriptions.py
app/main/: descriptions_matching.py  main.py  system.py
frontend/: config.js  index.html
